--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ padding: 0;
 
 body{
     background-color:rgb(228, 213, 213);
+    font-family: 'Karla', sans-serif;
 }
 
 /* Here is the section of the site */
